# frag

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml
frag/: bench.py
test/: test_bench.py
