[tool.poetry]
name = "frag"
version = "0.1.0"
description = "Factual Retrieval Augmented Generation (FRAG) Benchmark"
authors = ["Han Lee <lee.hanchung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
pydantic = "^2.3.0"
fire = "^0.5.0"
datasets = "^2.14.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.7.0"
pytest = "^7.4.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
